# futuraps-adaptive-spraying

./: LICENSE  README.md
futuraps_perception/: CMakeLists.txt  README.md  package.xml
futuraps_perception/config/: perception.yaml
futuraps_perception/config/canopy_density/: canopy_density.yaml
futuraps_perception/config/parameter_extractor/: parameter_extractor.yaml
futuraps_perception/config/pointcloud_filters/: crop_box_filter.yaml  local_map_filter.yaml
futuraps_perception/config/rtabmap/: rtabmap_slam.yaml  rtabmap_vo.yaml
futuraps_perception/config/visualization/: visualization.yaml
futuraps_perception/include/futuraps_perception/: grid_spec.hpp
futuraps_perception/launch/: perception_bringup.launch.py
futuraps_perception/launch/includes/: parameter_extractor.launch.py  point_cloud_filter.launch.py  rtabmap_local.launch.py
futuraps_perception/rviz/: futuraps.rviz
futuraps_perception/src/canopy_density/: canopy_density_map_colorizer_node.cpp  canopy_density_server.cpp  canopy_density_visualizer.cpp
futuraps_perception/src/closest_points/: closest_grid_server.cpp  closest_point_visualizer.cpp  cloud_bounds_server.cpp  top_canopy_point_server.cpp
futuraps_perception/src/filters/: crop_box_filter.cpp  local_map_filter.cpp
futuraps_perception/src/surface_normals/: surface_normal_server.cpp  surface_normal_visualizer.cpp
futuraps_perception/srv/: GetClosestGrid.srv  GetTopCanopyPoint.srv
futuraps_platform_pid/: package.xml  setup.cfg  setup.py
futuraps_platform_pid/config/: default.yaml  platform_ur10_left_row_example.yaml
futuraps_platform_pid/futuraps_platform_pid/: pid.py  pid_controller_node.py  plot_pid_debug.py
futuraps_platform_pid/launch/: pid_controller.launch.py
futuraps_spray_coverage/: CMakeLists.txt  README.md  package.xml
futuraps_spray_coverage/config/: default.yaml  platform_ur10_6_nozzle.yaml
futuraps_spray_coverage/include/futuraps_spray_coverage/: spray_model.hpp
futuraps_spray_coverage/launch/: spray_coverage.launch.py
futuraps_spray_coverage/src/: spray_coverage_node.cpp  spray_model.cpp
futuraps_task_planner/: CMakeLists.txt  package.xml
futuraps_task_planner/config/: horizontal_spray.yaml  horizontal_spray_servo.yaml  pose_plan.yaml  vertical_pose_planner.yaml  vertical_spray_servo.yaml
futuraps_task_planner/include/futuraps_task_planner/: arm_motion_interface.hpp  horizontal_path_builder.hpp  perception_client.hpp  platform_moving.hpp  trajectory_visualizer.hpp  types.hpp
futuraps_task_planner/include/futuraps_task_planner/path/: path_builder.hpp  path_follower.hpp  path_types.hpp  reachability_filter.hpp
futuraps_task_planner/launch/: horizontal_spray.launch.py  horizontal_spray_servo.launch.py  pose_plan_execute.launch.py  servo.launch.py  vertical_spray_servo.launch.py  vertical_task_planner.launch.py
futuraps_task_planner/src/: arm_motion_interface.cpp  horizontal_path_builder.cpp  horizontal_spray_node.cpp  horizontal_spray_servo_node.cpp  perception_client.cpp  platform_moving.cpp  pose_plan_execute.cpp  simple_task_planner.cpp  trajectory_visualizer.cpp  vertical_pose_planner.cpp  vertical_spray_servo.cpp
futuraps_task_planner/src/path/: path_builder.cpp  path_follower.cpp  reachability_filter.cpp
